# CookieBot

./: .env.prod  README.md  pyproject.toml
CookieBot/plugins/joinmessage/: __init__.py  config.py
