[project]
name = "CookieBot"
version = "0.1.0"
description = "CookieBot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["CookieBot/plugins"]
builtin_plugins = []
